# cli-agent

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
docs/: API_REFERENCE.md  TECHNICAL_DOCS.md  USER_GUIDE.md
tests/: README.md  __init__.py  test_ai.py  test_codeagent.py  test_context.py  test_context_management.py  test_file_operations.py  test_integration.py  test_new_features.py  test_orchestrator.py  test_runner.py
