[project]
name = "code-agent"
version = "1.0.0"
description = "AI-powered code review CLI that analyzes code, finds bugs, and challenges developers to improve code quality"
authors = [{name = "Rohith Singh", email = "rohittcodes@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rohittcodes/code-agent"
Repository = "https://github.com/rohittcodes/code-agent"
